--- a/module_set/src/main/res/values/colors.xml
+++ b/module_set/src/main/res/values/colors.xml
@@ -23,4 +23,8 @@
      <color name="set_tv_recovertheme_color">#333333</color>
      <color name="set_color_picker_cancel_text_color">#999999</color>
      <color name="set_color_picker_confim_text_color">#333333</color>
+     <color name="set_tv_language_name_color">#333333</color>
+     <color name="set_tv_open_night_time_color">#333333</color>
+     <color name="set_tv_start_night_time_color">#333333</color>
+     <color name="set_tv_start_day_time_color">#333333</color>
 </resources>
