--- a/module_set/src/main/res/values-night/colors.xml
+++ b/module_set/src/main/res/values-night/colors.xml
@@ -25,4 +25,5 @@
     <color name="set_tv_open_night_time_color">#D3D3D3</color>
     <color name="set_tv_start_night_time_color">#D3D3D3</color>
     <color name="set_tv_start_day_time_color">#D3D3D3</color>
+    <color name="set_change_text_size_tip_color">#D3D3D3</color>
 </resources>
