--- a/module_set/src/main/res/values/colors.xml
+++ b/module_set/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
      <color name="set_tv_open_night_time_color">#333333</color>
      <color name="set_tv_start_night_time_color">#333333</color>
      <color name="set_tv_start_day_time_color">#333333</color>
+     <color name="set_change_text_size_tip_color">#333333</color>
 </resources>
