--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -116,4 +116,5 @@
     <dimen name="set_rl_start_day_time_margin_top">20dp</dimen>
     <dimen name="set_tv_start_day_time_text_size">16sp</dimen>
     <dimen name="set_day_time_value_margin_right">2dp</dimen>
+    <dimen name="set_csv_font_size_height">80dp</dimen>
 </resources>
