--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -120,4 +120,39 @@
     <dimen name="set_custom_gesture_lock_view_margin_end">50dp</dimen>
     <dimen name="set_custom_gesture_lock_view_margin_start">50dp</dimen>
     <dimen name="set_custom_gesture_lock_view_margin_top">76dp</dimen>
+    <dimen name="set_about_app_name_margin_top">20dp</dimen>
+    <dimen name="set_tv_about_app_name_text_size">24sp</dimen>
+    <dimen name="set_tv_about_app_version_text_size">16sp</dimen>
+    <dimen name="set_cv_about_margin_left">20dp</dimen>
+    <dimen name="set_cv_about_margin_top">20dp</dimen>
+    <dimen name="set_cv_about_margin_right">20dp</dimen>
+    <dimen name="set_cv_about_radius">6dp</dimen>
+    <dimen name="set_cv_padding_left">16dp</dimen>
+    <dimen name="set_cv_padding_right">16dp</dimen>
+    <dimen name="set_rl_update_daily_margin_top">20dp</dimen>
+    <dimen name="set_rl_update_daily_margin_bottom">20dp</dimen>
+    <dimen name="set_tv_update_textsize">18sp</dimen>
+    <dimen name="set_rl_access_parnter_margin_top">20dp</dimen>
+    <dimen name="set_rl_access_parnter_margin_bottom">20dp</dimen>
+    <dimen name="set_tv_access_partner_directory_text_size">18sp</dimen>
+    <dimen name="set_rl_check_update_margin_top">20dp</dimen>
+    <dimen name="set_rl_check_update_margin_bottom">20dp</dimen>
+    <dimen name="set_tv_check_update_text_size">18sp</dimen>
+    <dimen name="set_tv_new_version_text_size">14sp</dimen>
+    <dimen name="set_ll_about_margin_bottom">20dp</dimen>
+    <dimen name="set_tv_privacy_protocol_margin_left">10dp</dimen>
+    <dimen name="set_cv_version_record_margin_top">8dp</dimen>
+    <dimen name="set_cv_version_record_margin_left">8dp</dimen>
+    <dimen name="set_cv_version_record_margin_right">8dp</dimen>
+    <dimen name="set_cv_version_record_radius">6dp</dimen>
+    <dimen name="set_cl_version_margin_bottom">8dp</dimen>
+    <dimen name="set_tv_appupdate_title_margin_top">8dp</dimen>
+    <dimen name="set_tv_appupdate_title_margin_left">8dp</dimen>
+    <dimen name="set_tv_appupdate_title_padding_right">8dp</dimen>
+    <dimen name="set_tv_appupdate_title_text_size">16sp</dimen>
+    <dimen name="set_tv_appupdate_time_margin_right">8dp</dimen>
+    <dimen name="set_tv_appupdate_desc_text_size">16sp</dimen>
+    <dimen name="set_tv_appupdate_desc_margin_top">4dp</dimen>
+    <dimen name="set_tv_appupdate_desc_margin_left">8dp</dimen>
+    <dimen name="set_tv_appupdate_desc_padding_right">8dp</dimen>
 </resources>
