--- a/module_mine/src/main/res/layouts/activitys/layout/mine_login_activity.xml
+++ b/module_mine/src/main/res/layouts/activitys/layout/mine_login_activity.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mine_cl_login_bg">
+    android:background="@color/mine_cl_login_bg"
+    android:id="@+id/mine_login_root">
 
 
     <include
