--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -55,8 +55,17 @@
     <dimen name="set_tv_official_website_arrow_margin_right">20dp</dimen>
     <dimen name="set_rl_about_margin_left">26dp</dimen>
     <dimen name="set_rl_about_margin_top">20dp</dimen>
+    <dimen name="set_rl_person_message_manager_margin_left">26dp</dimen>
+    <dimen name="set_rl_person_message_manager_margin_top">20dp</dimen>
+    <dimen name="set_rl_person_message_margin_top">20dp</dimen>
+    <dimen name="set_rl_person_message_margin_left">26dp</dimen>
+    <dimen name="set_rl_device_message_margin_top">20dp</dimen>
+    <dimen name="set_rl_device_message_margin_left">26dp</dimen>
+    <dimen name="set_rl_person_message_arrow_margin_right">20dp</dimen>
+    <dimen name="set_rl_device_message_arrow_margin_right">20dp</dimen>
     <dimen name="set_tv_about_text_size">18sp</dimen>
     <dimen name="set_tv_about_wanandroid_arrow_margin_right">20dp</dimen>
+    <dimen name="set_tv_person_message_arrow_margin_right">20dp</dimen>
     <dimen name="set_rl_logout_margin_left">26dp</dimen>
     <dimen name="set_rl_logout_margin_top">20dp</dimen>
     <dimen name="set_tv_logout_text_size">18sp</dimen>
@@ -155,4 +164,5 @@
     <dimen name="set_tv_appupdate_desc_margin_top">4dp</dimen>
     <dimen name="set_tv_appupdate_desc_margin_left">8dp</dimen>
     <dimen name="set_tv_appupdate_desc_padding_right">8dp</dimen>
+    <dimen name="set_tv_personal_message_text_size">18sp</dimen>
 </resources>
