--- a/module_set/src/main/res/layouts/activitys/layout/set_personal_manager_activity.xml
+++ b/module_set/src/main/res/layouts/activitys/layout/set_personal_manager_activity.xml
@@ -17,7 +17,7 @@
         />
 
     <RelativeLayout
-        android:id="@+id/rl_personal_message"
+        android:id="@+id/set_rl_personal_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,10 +50,10 @@
 
 
     <RelativeLayout
-        android:id="@+id/rl_device_message"
+        android:id="@+id/set_rl_device_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/rl_personal_message"
+        app:layout_constraintTop_toBottomOf="@id/set_rl_personal_message"
         android:layout_marginTop="@dimen/set_rl_device_message_margin_top"
         android:layout_marginLeft="@dimen/set_rl_device_message_margin_left"
         >
