--- a/module_set/src/main/res/values-night/colors.xml
+++ b/module_set/src/main/res/values-night/colors.xml
@@ -30,4 +30,5 @@
     <color name="set_change_text_size_tip_color">#D3D3D3</color>
     <color name="set_cv_about_backgroud_color">#666666</color>
     <color name="set_tv_appupdate_desc_color">#D3D3D3</color>
+    <color name="set_tv_user_name_color">#D3D3D3</color>
 </resources>
