--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -165,13 +165,55 @@
     <dimen name="set_tv_appupdate_desc_margin_left">8dp</dimen>
     <dimen name="set_tv_appupdate_desc_padding_right">8dp</dimen>
     <dimen name="set_tv_personal_message_text_size">18sp</dimen>
-    <dimen name="set_rl_user_name_margin_top">10dp</dimen>
     <dimen name="set_tv_user_name_margin_left">26dp</dimen>
     <dimen name="set_tv_user_name_text_size">18sp</dimen>
     <dimen name="set_tv_user_name_margin_right">20dp</dimen>
-    <dimen name="set_rl_user_name_padding_bottom">10dp</dimen>
-    <dimen name="set_rl_user_email_margin_top">10dp</dimen>
     <dimen name="set_tv_user_email_margin_left">26dp</dimen>
     <dimen name="set_tv_user_email_margin_right">20dp</dimen>
-    <dimen name="set_rl_user_email_padding_bottom">10dp</dimen>
+    <dimen name="set_rl_user_name_height">48dp</dimen>
+    <dimen name="set_rl_email_height">48dp</dimen>
+    <dimen name="set_rl_coins_height">48dp</dimen>
+    <dimen name="set_tv_user_coins_margin_right">20dp</dimen>
+    <dimen name="set_rl_rank_height">48dp</dimen>
+    <dimen name="set_tv_user_coin_margin_left">26dp</dimen>
+    <dimen name="set_tv_user_rank_margin_left">26dp</dimen>
+    <dimen name="set_tv_user_rank_margin_right">20dp</dimen>
+    <dimen name="set_rl_system_version_margin_top">10dp</dimen>
+    <dimen name="set_tv_system_version_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_system_version_left_text_size">18sp</dimen>
+    <dimen name="set_tv_system_version_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_system_version_height">48dp</dimen>
+    <dimen name="set_rl_sdk_system_version_height">48dp</dimen>
+    <dimen name="set_android_sdk_version_left_text_size">18sp</dimen>
+    <dimen name="set_android_sdk_version_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_android_sdk_version_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_resolution_height">48dp</dimen>
+    <dimen name="set_tv_display_screen_left_text_size">18sp</dimen>
+    <dimen name="set_tv_display_screen_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_screen_size_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_area_height">48dp</dimen>
+    <dimen name="set_tv_area_left_text_size">18sp</dimen>
+    <dimen name="set_tv_area_left_margin_right">26dp</dimen>
+    <dimen name="set_tv_area_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_time_zone_height">48dp</dimen>
+    <dimen name="set_tv_time_zone_left_text_size">18sp</dimen>
+    <dimen name="set_tv_time_zone_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_time_zone_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_ip_address_height">48dp</dimen>
+    <dimen name="set_tv_ip_address_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_ip_address_left_text_size">18sp</dimen>
+    <dimen name="set_tv_ip_adress_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_mac_address_height">48dp</dimen>
+    <dimen name="set_tv_mac_address_text_size">18sp</dimen>
+    <dimen name="set_tv_mac_address_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_mac_address_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_sim_message_height">48dp</dimen>
+    <dimen name="set_tv_sim_message_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_sim_message_text_size">18sp</dimen>
+    <dimen name="set_tv_sim_message_right_margin_right">20dp</dimen>
+    <dimen name="set_rl_unique_height">48dp</dimen>
+    <dimen name="set_tv_unique_left_margin_left">26dp</dimen>
+    <dimen name="set_tv_unique_text_size">18sp</dimen>
+    <dimen name="set_tv_unique_id_margin_right">20dp</dimen>
+    <dimen name="set_tv_unique_id_margin_left">10dp</dimen>
 </resources>
