--- a/module_set/src/main/res/values-night/colors.xml
+++ b/module_set/src/main/res/values-night/colors.xml
@@ -31,4 +31,14 @@
     <color name="set_cv_about_backgroud_color">#666666</color>
     <color name="set_tv_appupdate_desc_color">#D3D3D3</color>
     <color name="set_tv_user_name_color">#D3D3D3</color>
+    <color name="set_tv_email_color">#D3D3D3</color>
+    <color name="set_tv_coins_color">#D3D3D3</color>
+    <color name="set_os_system_version_color">#D3D3D3</color>
+    <color name="set_android_sdk_version_color">#D3D3D3</color>
+    <color name="set_display_screen_left_color">#D3D3D3</color>
+    <color name="set_tv_area_left_color">#D3D3D3</color>
+    <color name="set_time_zone_left_color">#D3D3D3</color>
+    <color name="set_ip_adress_left_color">#D3D3D3</color>
+    <color name="set_tv_sim_left_color">#D3D3D3</color>
+    <color name="set_tv_unique_id_color">#D3D3D3</color>
 </resources>
