--- a/module_set/src/main/res/values/colors.xml
+++ b/module_set/src/main/res/values/colors.xml
@@ -35,4 +35,16 @@
      <color name="set_cv_about_backgroud_color">#55aff4</color>
      <color name="set_tv_appupdate_desc_color">#333333</color>
      <color name="set_tv_user_name_color">#333333</color>
+     <color name="set_tv_email_color">#333333</color>
+     <color name="set_tv_coins_color">#333333</color>
+     <color name="set_tv_color_title">#333333</color>
+     <color name="set_os_system_version_color">#333333</color>
+     <color name="set_android_sdk_version_color">#333333</color>
+     <color name="set_display_screen_left_color">#333333</color>
+     <color name="set_tv_area_left_color">#333333</color>
+     <color name="set_time_zone_left_color">#333333</color>
+     <color name="set_ip_adress_left_color">#333333</color>
+     <color name="set_mac_address_left_color">#333333</color>
+     <color name="set_tv_sim_left_color">#333333</color>
+     <color name="set_tv_unique_id_color">#333333</color>
 </resources>
