1.升级ActivityKtx库到从1.1.0到1.5.1 2.升级FragmentKtx库从1.2.5到1.5.2 3.升级Material库从1.2.0到1.5.0 4.kotlin从1.5.10升级到1.8.10 5.coroutines从1.5.0升级到1.7.0 6.Lifecycle从2.3.1升级到2.5.1 7.Hilt从2.37升级到2.47，Room从2.3.0升级到2.4.3 8.更改底部导航栏 9.更新权限库 10.全面适配Android13

--- a/library_base/src/main/res/values-v28/styles.xml
+++ b/library_base/src/main/res/values-v28/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="base_AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
@@ -13,6 +13,7 @@
         <item name="android:windowAnimationStyle">@android:style/Animation.Toast</item>
 
     </style>
+
     <!-- 确定按钮样式-->
     <style name="base_positiveBtnStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
         <item name="android:textColor">#55aff4</item>
