--- a/module_main/src/main/res/layouts/activitys/layout/main_activity.xml
+++ b/module_main/src/main/res/layouts/activitys/layout/main_activity.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
+    <com.yh.bottomnavigationex.BottomNavigationViewEx
         android:id="@+id/btn_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +20,7 @@
         android:background="@color/main_bottom_color"
         app:itemTextColor="@drawable/main_bottom_color_selector"
         app:layout_behavior="com.knight.kotlin.library_widget.BottomNavigationBehavior"
-        app:menu="@menu/main_menu_main" />
+        app:menu="@menu/main_menu_main"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
