基本完成视频播放

--- a/module_video/src/main/res/layouts/adapters/layout/video_main_item.xml
+++ b/module_video/src/main/res/layouts/adapters/layout/video_main_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/iv_vedio"
+        android:id="@+id/iv_video"
         android:layout_height="220dp"
         android:layout_width="match_parent"
         android:scaleType="fitXY"
