--- a/module_video/src/main/res/layouts/adapters/layout/video_play_item.xml
+++ b/module_video/src/main/res/layouts/adapters/layout/video_play_item.xml
@@ -13,6 +13,11 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+    <com.knight.kotlin.module_video.view.ControllerView
+        android:id="@+id/controller"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
     <ImageView
         android:id="@+id/iv_play"
         android:layout_width="60dp"
